name:                req-streaming
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/req-streaming
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz fripost.org
copyright:           2019 Marco Zocca
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.4

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Network.HTTP.Req.Streaming
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , exceptions
                     , http-client
                     , http-client-tls
                     , req
                     , resourcet
                     , streaming
                     , streaming-bytestring
                     , transformers
                     , unliftio-core

-- executable req-streaming
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , req-streaming

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , req-streaming
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/req-streaming
